<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">柚生</string>
    <string name="settings">设置</string>
    <string name="new_item">添加新事项</string>
    <string name="new_item_hint">例如：明天买两张电影票</string>
    <string name="weightRecord">体重记录</string>
    <string name="version">V1.0.0</string>
    <string name="cv_app_name">CalendarView</string>
    <string-array name="lunar_first_of_month">
        <item>春节</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>冬月</item>
        <item>腊月</item>
    </string-array>
    <string-array name="tradition_festival">
        <item>除夕</item>
        <item>0101春节</item>
        <item>0115元宵</item>
        <item>0505端午</item>
        <item>0707七夕</item>
        <item>0815中秋</item>
        <item>0909重阳</item>
    </string-array>
    <string-array name="lunar_str">
        <item>初一</item>
        <item>初二</item>
        <item>初三</item>
        <item>初四</item>
        <item>初五</item>
        <item>初六</item>
        <item>初七</item>
        <item>初八</item>
        <item>初九</item>
        <item>初十</item>
        <item>十一</item>
        <item>十二</item>
        <item>十三</item>
        <item>十四</item>
        <item>十五</item>
        <item>十六</item>
        <item>十七</item>
        <item>十八</item>
        <item>十九</item>
        <item>二十</item>
        <item>廿一</item>
        <item>廿二</item>
        <item>廿三</item>
        <item>廿四</item>
        <item>廿五</item>
        <item>廿六</item>
        <item>廿七</item>
        <item>廿八</item>
        <item>廿九</item>
        <item>三十</item>
    </string-array>
    <string-array name="solar_festival" tools:ignore="InconsistentArrays">
        <item>0101元旦</item>
        <item>0214情人节</item>
        <item>0308妇女节</item>
        <item>0312植树节</item>
        <item>0315消权日</item>
        <item>0401愚人节</item>
        <item>0422地球日</item>
        <item>0501劳动节</item>
        <item>0504青年节</item>
        <item>0601儿童节</item>
        <item>0701建党节</item>
        <item>0801建军节</item>
        <item>0910教师节</item>
        <item>1001国庆节</item>
        <item>1031万圣节</item>
        <item>1111光棍节</item>
        <item>1224平安夜</item>
        <item>1225圣诞节</item>
    </string-array>
    <string-array name="solar_term">
        <item>春分</item>
        <item>清明</item>
        <item>谷雨</item>
        <item>立夏</item>
        <item>小满</item>
        <item>芒种</item>
        <item>夏至</item>
        <item>小暑</item>
        <item>大暑</item>
        <item>立秋</item>
        <item>处暑</item>
        <item>白露</item>
        <item>秋分</item>
        <item>寒露</item>
        <item>霜降</item>
        <item>立冬</item>
        <item>小雪</item>
        <item>大雪</item>
        <item>冬至</item>
        <item>小寒</item>
        <item>大寒</item>
        <item>立春</item>
        <item>雨水</item>
        <item>惊蛰</item>
    </string-array>
    <string-array name="special_festivals">
        <item>母亲节</item>
        <item>父亲节</item>
        <item>感恩节</item>
    </string-array>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string-array name="week_string_array">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>
    <string-array name="year_view_week_string_array">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>
    <string-array name="month_string_array">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
    <string name="title_date_text">2018年5月</string>
    <string name="setting">设置</string>
    <string name="mense_management">经期管理</string>
    <string name="make_sure">确定</string>
    <string name="pregnant_percent">好孕率</string>
    <string name="text_jingqi_duration">经期</string>
    <string name="text_pailuan_duration">排卵期间</string>
    <string name="text_pailuan_date">排卵日</string>
    <string name="text_suggestion_ml">建议同房</string>
    <string name="text_already_ml">已同房</string>
    <string name="instruction">使用说明</string>
    <string name="menstruation_start">月经开始</string>
    <string name="menstruation_end">月经结束</string>
    <string name="make_love">同房爱爱</string>
    <string name="ovulation">排卵试纸</string>
    <string name="ovulation_tip">如正确使用，排卵日准确率接近100%</string>
    <string name="comment">备注</string>
    <string name="come_on">加油坚持，小宝贝</string>
    <string name="prepare_pregnant">备孕必检项</string>
    <string name="tip_prepare_pregnant">这些东西您一定要注意</string>
    <string name="tip_ovulation_suggestion">及时录入试纸结果智能预测排卵日</string>
    <string name="record_ovulation_result">录入试纸结果</string>
    <string name="no_ovulation">无记录，快录入试纸结果</string>
    <string name="ovulation_level_one">弱弱阳</string>
    <string name="ovulation_level_two">弱阳</string>
    <string name="ovulation_level_three">阳</string>
    <string name="ovulation_level_four">强阳</string>
    <string name="welcome_text">柚生 ( 有质有料才精彩 )</string>
    <string name="ready_comment">  加油坚持，小宝贝！</string>
    <string name="record_in">录入</string>
    <string name="pregnant_check">备孕必检项</string>
    <string name="pregnant_check_item_detail">备孕比检项详情</string>
    <string name="wechat_text_title">微信公众号</string>
    <string name="wechat_text_content">请搜索：  "柚生" 并关注</string>
    <string name="good_lifet_sign">优生打卡</string>
    <string name="add_new_habbit">添加新习惯</string>
    <string name="to_do_list">待办事项</string>
    <string name="add_new_item">添加新事项</string>
    <string name="date_picker_cancle">取消</string>
    <string name="date_picker_title">请选择时间</string>
    <string name="date_picker_commit">确定</string>
    <string name="date_picker_year">年</string>
    <string name="date_picker_month">月</string>
    <string name="date_picker_day">日</string>
    <string name="date_picker_hour">时</string>
    <string name="date_picker_minute">分</string>
    <string name="date_picker_app_name">日期选择控件</string>
    <string name="date_picker_select_date">选择日期</string>
    <string name="date_picker_current_date">当前日期</string>
    <string name="date_picker_select_time">选择时间</string>
    <string name="date_picker_current_time">当前时间</string>
    <string name="mense_duration_main_title">周期天数</string>
    <string name="mense_duration_sub_title">两次月经间隔多久</string>
    <string name="mense_days_main_title">经期天数</string>
    <string name="mense_days_sub_title">月经持续几天</string>
    <string name="mense_start_day_main_title">上次月经开始</string>
    <string name="mense_start_day_sub_title">最近一次何时开始</string>
    <string name="mense_notify_main_title">月经提醒</string>
    <string name="mense_notify_sub_title">提前2天提醒</string>
    <string name="mense_pregnant_main_title">备孕模式</string>
    <string name="mense_pregnant_sub_title">开启后切换到备孕模式</string>
    <string name="mense_notice_main_title">经期提醒</string>
    <string name="mense_notice_sub_title">两天之内大姨妈就来了</string>
    <string name="comment_default_hint">加油坚持，小宝贝!</string>
    <string name="feed_back_activity">去吐槽</string>
    <string name="send_feed_back">发送</string>
    <string name="feed_back_hint">吐槽，给您带来的不便很抱歉！我们会尽快改正！</string>
    <string name="pailuan_instruction">
1：在月经结束后的第三天左右开始检测尿液，接下来几天要连续检测。检测前，至少2小时内少喝水，以免稀释尿液，影响检测结果。用洁净、干燥的容器收集尿液，切记不可使用晨尿。尽量采用每一天同一时刻的尿样。
\n2：将排卵试纸带有箭头检测线的一段插入到收集干净的尿液中，注意尿液不要超过MAX标识线，也不要过浅，尽量接近MAX标识线。
\n3：试纸浸入尿液约3秒钟，看到尿液呈红色沿着试纸向上爬后取出。
\n4：将试纸取出，平放。注意：不要污染试纸，让其自然干却。
\n5：10分钟后，30分钟内观察检测结果。超过30分钟试纸完全干却后容易误判，尽量按规定时间读取检测结果。
\n6：根据试纸检测结果，在录入试纸结果页面勾选检测结果（弱弱阳，弱阳，阳，强阳）
    </string>
    <string-array name="pregnant_check_main_title">
        <item>女性优生优育检查</item>
        <item>优生季节</item>
        <item>不养宠物</item>
        <item>用药禁忌</item>
        <item>远离有毒化学物</item>
        <item>最佳生育年龄</item>
        <item>学会减压</item>
        <item>科学饮食</item>
        <item>备孕期间的饮食禁忌</item>
        <item>少穿紧身衣</item>
        <item>少穿高跟鞋</item>
        <item>经期不要捶腰</item>
        <item>经期不要拔牙</item>
        <item>保持外阴的清洁卫生</item>
        <item>经期不要用洗液清洗阴部</item>
    </string-array>
    <string-array name="pregnant_check_sub_title">
        <item>进行优生优育检查，彻底预防出生缺陷</item>
        <item>早孕期应避开冬春季节</item>
        <item>备孕期间与宠物密切接触易感染弓形虫</item>
        <item>用药不当，可能会对孕妇及胎儿有影响</item>
        <item>备孕怀孕期间要远离有毒化学物</item>
        <item>人的最佳生育年龄是24到30岁之间</item>
        <item>学会减压，轻松生活，保持好心情</item>
        <item>科学饮食，合理搭配</item>
        <item>多食此类食品会出现消化功能障碍，不利于孕妇身体健康 </item>
        <item>长时间穿紧身衣易形成子宫内膜异位症</item>
        <item>长时间穿高跟鞋易造成骨盆腔位移</item>
        <item>可能会导致盆腔充血加剧，血流加快，月经量增多，经期延长</item>
        <item>经期拔牙，刺激子宫收缩，易引起经血大量排出</item>
        <item>不能保持外阴的清洁，会直接影响受孕几率</item>
        <item>用洗液过度清洗阴部，易使阴道受到感染和细菌的侵害，感染妇科疾病</item>
    </string-array>
</resources>