<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical">

    <Button
        android:text="@string/settings"
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/new_item"
        android:id="@+id/newItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/weightRecord"
        android:id="@+id/weightRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="添加新习惯"
        android:id="@+id/habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>