<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.TestActivity">


    <Button
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="首页" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <Button
        android:id="@+id/newItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_item" />

    <Button
        android:id="@+id/weightRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weightRecord" />

    <Button
        android:id="@+id/habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="添加新习惯" />

    <Button
        android:id="@+id/splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="广告页" />

    <Button
        android:id="@+id/mense_management"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="经期管理" />

    <Button
        android:id="@+id/holdDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="打卡天数" />

    <Button
        android:id="@+id/btn_ready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregnant_check" />

    <Button
        android:id="@+id/btn_show_pop_up_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="展示弹框" />

</LinearLayout>