<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/date_picker_background"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/date_picker_cancle"
            android:textColor="@color/date_picker_text1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/date_picker_title"
            android:textColor="@color/date_picker_text1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/date_picker_commit"
            android:textColor="@color/date_picker_text1"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/date_picker_split_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/date_picker_background"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp">

            <com.liuwan.customdatepicker.widget.DatePickerView
                android:id="@+id/year_pv"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_date_picker_view"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/year_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date_picker_year"
                android:textColor="@color/date_picker_text2"
                android:textSize="18sp" />

            <com.liuwan.customdatepicker.widget.DatePickerView
                android:id="@+id/month_pv"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_date_picker_view"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/month_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date_picker_month"
                android:textColor="@color/date_picker_text2"
                android:textSize="18sp" />

            <com.liuwan.customdatepicker.widget.DatePickerView
                android:id="@+id/day_pv"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_date_picker_view"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/day_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date_picker_day"
                android:textColor="@color/date_picker_text2"
                android:textSize="18sp" />

            <com.liuwan.customdatepicker.widget.DatePickerView
                android:id="@+id/hour_pv"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_date_picker_view"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/hour_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date_picker_hour"
                android:textColor="@color/date_picker_text2"
                android:textSize="18sp" />

            <com.liuwan.customdatepicker.widget.DatePickerView
                android:id="@+id/minute_pv"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_date_picker_view"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/minute_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date_picker_minute"
                android:textColor="@color/date_picker_text2"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>