<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20000000">

    <RelativeLayout
        android:layout_width="265dp"
        android:layout_height="178dp"
        android:layout_centerInParent="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="26dp"
            android:text="@string/wechat_text_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginStart="27dp"
            android:layout_marginTop="25dp"
            android:text="@string/wechat_text_content"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_make_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="27dp"
            android:background="@null"
            android:paddingBottom="23dp"
            android:text="@string/make_sure"
            android:textColor="@color/text_color_red_theme"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>
